[gd_scene load_steps=7 format=3 uid="uid://bbv174nktptcn"]

[ext_resource type="Script" path="res://levels/debug_Level/debug_level_gm.gd" id="1_nv7r1"]
[ext_resource type="Texture2D" uid="uid://b1xe50r2jy3n2" path="res://icon.svg" id="1_tv8gr"]
[ext_resource type="PackedScene" uid="uid://cak20tkrlh6dg" path="res://presets/player/player.tscn" id="2_k6hc3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_utmvj"]
size = Vector2(288, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3qxng"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s4yrr"]

[node name="Debug_Level" type="Node2D"]
script = ExtResource("1_nv7r1")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(8, 136)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(136, 8)
shape = SubResource("RectangleShape2D_utmvj")
debug_color = Color(0.0509804, 0.592157, 0.741176, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(136, 8)
scale = Vector2(2.25, 0.25)
texture = ExtResource("1_tv8gr")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(8, 512)
collision_layer = 0
collision_mask = 0
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(136, 8)
shape = SubResource("RectangleShape2D_utmvj")
debug_color = Color(0.0509804, 0.592157, 0.741176, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D2"]
position = Vector2(136, 8)
scale = Vector2(2.25, 0.25)
texture = ExtResource("1_tv8gr")

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(8, 320)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2(136, 8)
shape = SubResource("RectangleShape2D_utmvj")
debug_color = Color(0.0509804, 0.592157, 0.741176, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D3"]
position = Vector2(136, 8)
scale = Vector2(2.25, 0.25)
texture = ExtResource("1_tv8gr")

[node name="Player" parent="." instance=ExtResource("2_k6hc3")]
position = Vector2(24, 0)
scale = Vector2(0.2, 0.2)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(240, 88)
scale = Vector2(2.566, 2.566)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_3qxng")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(-128, 240)
scale = Vector2(2.566, 2.566)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("RectangleShape2D_3qxng")

[node name="Sprite2D" type="Sprite2D" parent="Area2D2"]
position = Vector2(1.52588e-05, 0)
scale = Vector2(0.207716, 0.207716)
texture = ExtResource("1_tv8gr")

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2(232, 280)
scale = Vector2(2.62, 2.62)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
shape = SubResource("RectangleShape2D_s4yrr")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_area_2d_3_area_entered"]
[connection signal="body_exited" from="Area2D3" to="." method="_on_area_2d_3_area_exited"]
